# template-gtest

./: CMakeLists.txt
src/: template.cpp
